# OpenChromDist

./: BarcodePeakDist.cpp  BarcodePeakDist.h  CMakeLists.txt  CellData.h  CellDataMeanVar.h  CellInOutMeanVar.h  DoxyODist  PeakBasedDist.cpp  PeakBasedDist.h  PeakDistanceMatrix.cpp  PeakDistanceMatrix.h  README.md  SinglePeakDist.cpp  SinglePeakDist.h  main.cpp  mainTest.cpp  maintTest.cpp  version.h.in
Test/: FragATAC_first200_LateRec_127p.tsv  barCodes.txt  chromFile.txt
docs/: BarcodePeakDist_8h_source.html  CellDataMeanVar_8h_source.html  CellData_8h_source.html  CellInOutMeanVar_8h_source.html  PeakBasedDist_8h_source.html  PeakDistanceMatrix_8h_source.html  SinglePeakDist_8h_source.html  annotated.html  classBarcodePeakDist-members.html  classBarcodePeakDist.html  classBarcodePeakDist__coll__graph.md5  classBarcodePeakDist__inherit__graph.map  classCellData-members.html  classCellData.html  classCellDataMeanVar-members.html  classCellDataMeanVar.html  classCellInOutMeanVar-members.html  classCellInOutMeanVar.html  classPeakBasedDist-members.html  classPeakBasedDist.html  classPeakDistanceMatrix-members.html  classPeakDistanceMatrix.html  classSinglePeakDist-members.html  classSinglePeakDist.html  classSinglePeakDist__inherit__graph.map  classSinglePeakDist__inherit__graph.md5  classcompute.html  classes.html  conceptCellInOut.html  concepts.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  hierarchy.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  (+8 more)
docs/html/: annotated.html  (+5 more)
(+53 files in other folders)
